--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@
          <li data-target="#pictures-carousel" data-slide-to="1"></li>
          <li data-target="#pictures-carousel" data-slide-to="2"></li>
          <li data-target="#pictures-carousel" data-slide-to="3"></li>
+        <li data-target="#pictures-carousel" data-slide-to="4"></li>
        </ol>
       <div class="carousel-inner">
         <div class="carousel-item active">
@@ -125,6 +126,14 @@
            <p>Simple, clean - modern bathrooms.</p>
            </div>
            </div>
+
+           <div class="carousel-item">
+             <img class= "d-block w-100 carouselPictures" src="images/house.png" alt="house-picture">
+             <div class="carousel-caption">
+              <h5>A Beautiful Inn. </h5>
+              <p>Truly a writer's retreat.</p>
+              </div>
+              </div>
 
 
         <div class="carousel-item">
