--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 </head>
 
 <body>
-<div class="bg">  <!-- background image 1 div -->
+
 
 <div class="container-fluid"> <!-- main div -->
 
@@ -73,20 +73,33 @@
 
 
 <section id="MiddleContent"> <!-- containing the "About Us" section-->
-<div class="container-fluid">
-
-<div class="col-lg-12 invisibleBlock">
-
-</div>
-
+<div class="container-fluid text-center">
     <div class="col-lg-12">
       <div id="collapseAbout" class="collapse">
         <div class="background-tint">
-      <h1>About Us</h1>
-      <p>We're a retreat designed specifically for writers. Since 2010, The Wright Retreat has been accommodating authors from all over the world.</p>
-      <p class="aboutme-Pfont">During your stay, you'll find every detail has been carefully looked after to maximize productivity. We hate writer's block too.</p>
-      <p>Within our acres, there is the expectation to keep all chatter to a library level of quiet at all times. We believe this atmosphere of serenity engages and activates the creative chambers of the mind.</p>
-      <p>Happy writing, we hope you'll join us!</p>
+      <h1 class="section-headingHFont">About Us</h1>
+      <div class="row">
+        <div class="col-lg-4 aboutDescription-padding">
+          <p class="section-headingPFont">We're a retreat designed specifically for writers. </p>
+          <p class="aboutSubtitle">300+ quality suites. Spa included.</p>
+        </div>
+
+        <div class="col-lg-4">
+          <img class="book-image aboutDescription-padding" src="images/lightbulb.png" alt="lightbulb">
+        </div>
+
+        <div class="col-lg-4 aboutDescription-padding">
+          <p class="section-headingPFont">Hospitality and serenity are our values. </p>
+            <p>Restaurants & coffee shops onsite. Lake access.</p>
+        </div>
+
+
+
+
+
+
+
+      </div>
         </div>
     </div>
     </div>
@@ -102,8 +115,8 @@
 <div class="row">
   <div class="col-sm-12">
 
-    <div id="pictures-carousel" class="carousel slide" data-ride="false" data-pause="hover">
-      <ol class="carousel-indicators">
+    <div id="pictures-carousel" class="carousel slide" data-ride="carousel" data-pause="hover">
+      <ol class="carousel-indicators ">
          <li data-target="#pictures-carousel" data-slide-to="0" class="active"></li>
          <li data-target="#pictures-carousel" data-slide-to="1"></li>
          <li data-target="#pictures-carousel" data-slide-to="2"></li>
@@ -113,15 +126,15 @@
       <div class="carousel-inner">
         <div class="carousel-item active">
           <img class="d-block w-100 test carouselPictures" src="images/room-picture.png" alt="room-picture">
-          <div class="carousel-caption">
+          <div class="carousel-caption carouselBackground-tint">
            <h5>Sleep Peacefully </h5>
-           <p>Get 8+ hours of sleep. Gaurenteed.</p>
+           <p>Get 8+ hours of sleep. Guaranteed.</p>
            </div>
            </div>
 
         <div class="carousel-item">
           <img class= "d-block w-100 carouselPictures" src="images/Bathtub.png" alt="bathtub-picture">
-          <div class="carousel-caption">
+          <div class="carousel-caption carouselBackground-tint">
            <h5>Get Refreshed. </h5>
            <p>Simple, clean - modern bathrooms.</p>
            </div>
@@ -129,7 +142,7 @@
 
            <div class="carousel-item">
              <img class= "d-block w-100 carouselPictures" src="images/house.png" alt="house-picture">
-             <div class="carousel-caption">
+             <div class="carousel-caption carouselBackground-tint">
               <h5>A Beautiful Inn. </h5>
               <p>Truly a writer's retreat.</p>
               </div>
@@ -138,7 +151,7 @@
 
         <div class="carousel-item">
           <img class= "d-block w-100 carouselPictures" src="images/couch.png" alt="couch-picture">
-          <div class="carousel-caption">
+          <div class="carousel-caption carouselBackground-tint">
            <h5>Plenty of room. </h5>
            <p>We operate 300 rooms year-round.</p>
            </div>
@@ -147,7 +160,7 @@
 
         <div class="carousel-item">
           <img class= "d-block w-100 carouselPictures" src="images/living-room.png" alt="livingRoom-picture">
-              <div class="carousel-caption">
+              <div class="carousel-caption carouselBackground-tint">
                <h5>Cozy.</h5>
                <p>Kick your feet up and relax.</p>
                </div>
@@ -157,11 +170,11 @@
 
 
         <a class="carousel-control-prev" href="#pictures-carousel" role="button" data-slide="prev">
-          <span class="carousel-control-prev-icon"></span>
+          <span class="carousel-control-prev-icon fontIcon"></span>
         </a>
 
         <a class="carousel-control-next" href="#pictures-carousel" role="button" data-slide="next">
-          <span class="carousel-control-next-icon"></span>
+          <span class="carousel-control-next-icon fontIcon"></span>
         </a>
 
       </div>
@@ -266,6 +279,6 @@
   </div>
 </footer>
 
-</div> <!-- background image div. Keep at the bottom of to maintain inteded page structure. -->
+
 </body>
 </html>
